--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-pro-sidebar": "^1.1.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
+    "react-transition-group": "^4.4.5",
+    "tailwind-scrollbar": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
