--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.5",
     "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.4",
     "formik": "^2.4.6",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
