--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
