--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.5",
+    "@mui/x-data-grid": "^7.14.0",
     "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
@@ -30,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "tailwind-scrollbar": "^3.1.0",
+    "timeago.js": "^4.0.0-beta.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
