--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
