--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "stripe": "^16.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
