'notification socketio complete'

--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_SERVER_URI = 'http://localhost:4000/api/v1/'
 
+NEXT_PUBLIC_SOCKET_SERVER_URI = 'http://localhost:4000/'
+
 GOOGLE_CLIENT_ID = 585731152317-t2i9lmjpl8k8aope29rs2bms73qi4fat.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET = 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
