--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.4.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "socket.io": "^4.8.0",
     "stripe": "^16.11.0"
   },
   "devDependencies": {
