--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.5",
     "@mui/x-data-grid": "^7.14.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
