--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
@@ -31,7 +32,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "socket.io": "^4.8.0",
-    "stripe": "^16.11.0"
+    "stripe": "^16.11.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
