--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "@stripe/stripe-js": "^4.4.0",
     "@tanstack/react-table": "^8.20.5",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.7.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
@@ -59,7 +59,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.5",
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
